force-app/main/default/objects/Customer_Reference__c/fields/Created_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Customer References (Created Lead)</relationshipLabel>
    <relationshipName>Customer_References1</relationshipName>
    <type>Lookup</type>
</CustomField>