force-app/main/default/objects/Customer_Reference__c/fields/Created_Lead_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_Lead_s_Name__c</fullName>
    <formula>Created_Lead__r.FirstName &amp; &quot; &quot; &amp; Created_Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Lead&apos;s Name</label>
    <type>Text</type>
</CustomField>