force-app/main/default/objects/Customer_Reference__c/fields/From_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>From_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer References</relationshipLabel>
    <relationshipName>Customer_References</relationshipName>
    <type>Lookup</type>
</CustomField>