force-app/main/default/objects/Customer_Reference__c/fields/Is_From_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Is_From_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From Marketing</label>
    <type>Checkbox</type>
</CustomField>