force-app/main/default/objects/Customer_Reference__c/fields/Is_Gift_Card_Referral__c.field-meta.xml
<CustomField>
    <fullName>Is_Gift_Card_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Gift Card Referral</label>
    <type>Checkbox</type>
</CustomField>