force-app/main/default/objects/Customer_Reference__c/fields/Is_Meeting_Booked__c.field-meta.xml
<CustomField>
    <fullName>Is_Meeting_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Meeting Booked</label>
    <type>Checkbox</type>
</CustomField>