force-app/main/default/objects/Customer_Reference__c/fields/Is_Reference_Lead_Converted__c.field-meta.xml
<CustomField>
    <fullName>Is_Reference_Lead_Converted__c</fullName>
    <formula>Created_Lead__r.IsConverted</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Reference Lead Converted</label>
    <type>Checkbox</type>
</CustomField>