force-app/main/default/objects/Customer_Reference__c/fields/Lead_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Closed_Date__c</fullName>
    <formula>Created_Lead__r.Closed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Closed Date</label>
    <type>DateTime</type>
</CustomField>