force-app/main/default/objects/Customer_Reference__c/fields/Referring_Account__c.field-meta.xml
<CustomField>
    <fullName>Referring_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer References</relationshipLabel>
    <relationshipName>Customer_References</relationshipName>
    <type>Lookup</type>
</CustomField>