force-app/main/default/objects/Customer_Reference__c/fields/Referring_Lead__c.field-meta.xml
<CustomField>
    <fullName>Referring_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Customer References</relationshipLabel>
    <relationshipName>Customer_References</relationshipName>
    <type>Lookup</type>
</CustomField>