force-app/main/default/objects/Customer_Reference__c/listViews/Converted_References.listView-meta.xml
<ListView>
    <fullName>Converted_References</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Referring_Lead__c</columns>
    <columns>Referring_Account__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Reference_Lead_Converted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Converted References</label>
</ListView>