force-app/main/default/objects/Customer_Reference__c/listViews/Referral_Program_Referrals.listView-meta.xml
<ListView>
    <fullName>Referral_Program_Referrals</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Created_Lead__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Referring_Lead__c</columns>
    <columns>Referring_Account__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>External_ID__c</field>
        <operation>startsWith</operation>
        <value>REF</value>
    </filters>
    <label>Referral Program Referrals</label>
</ListView>